--- a/WolvenKit/Views/Editors/VisualEditor/Nodes/OUT_Node.xaml
+++ b/WolvenKit/Views/Editors/VisualEditor/Nodes/OUT_Node.xaml
@@ -1,20 +1,21 @@
-﻿<UserControl x:Class="WolvenKit.Views.VisualEditor.Nodes.HelloWorldNodeView"
+﻿<UserControl x:Class="WolvenKit.Views.Editors.VisualEditor.Nodes.OUT_Node"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WolvenKit.Views.VisualEditor.Nodes" xmlns:views="clr-namespace:NodeNetwork.Views;assembly=NodeNetwork"
+             xmlns:local="clr-namespace:WolvenKit.Views.Editors.VisualEditor.Nodes" xmlns:views="clr-namespace:NodeNetwork.Views;assembly=NodeNetwork"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <views:NodeView x:Name="NodeView"
-                TitleFontFamily="Times New Roman" TitleFontSize="13" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" Foreground="Black"
-                ArrowSize="9" CornerRadius="0">
+                TitleFontSize="14" CornerRadius="35,5,5,35" Background="DarkRed" Foreground="WhiteSmoke"
+                ArrowSize="9" >
         <views:NodeView.LeadingControlPresenterStyle>
             <Style TargetType="ContentPresenter">
+
                 <Setter Property="ContentTemplate">
                     <Setter.Value>
                         <DataTemplate>
-                            <Label Background="Blue">Example 1</Label>
+
                         </DataTemplate>
                     </Setter.Value>
                 </Setter>
@@ -25,7 +26,6 @@
                 <Setter Property="ContentTemplate">
                     <Setter.Value>
                         <DataTemplate>
-                            <TextBox Background="{DynamicResource MahApps.Brushes.Accent}">Example 2</TextBox>
                         </DataTemplate>
                     </Setter.Value>
                 </Setter>
