Fixing "Home" Removed option to get there.

--- a/WolvenKit/Views/RibbonView.xaml
+++ b/WolvenKit/Views/RibbonView.xaml
@@ -31,7 +31,7 @@
             
             <!-- StartScreen -->
             <fluent:Ribbon.StartScreen>
-                <fluent:StartScreen x:Name="startScreen" IsOpen="True" >
+                <fluent:StartScreen x:Name="startScreen" IsOpen="False" >
                     <HomeView:HomePageView />
 
                     
