--- a/WolvenKit/Views/HomePage/HomePageView.xaml
+++ b/WolvenKit/Views/HomePage/HomePageView.xaml
@@ -33,12 +33,22 @@
                 <Mid:TopicView x:Name="TopicViewer"/>
 
         </Grid>
-        <Grid HorizontalAlignment="Left" Background="{DynamicResource MahApps.Brushes.AccentBase}">
+        <Grid Margin="15" HorizontalAlignment="Left">
 
-            <hc:SideMenu   x:Name="LeftSideMenu" Margin="0,80,0,0" SideBrush="{DynamicResource MahApps.Brushes.AccentBase}" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" BorderThickness="0" Width="200" SubSideBrush="{DynamicResource MahApps.Brushes.Accent2}">
+            <Border CornerRadius="15" Background="{DynamicResource RegionBrush}">
+
+            <hc:SideMenu   x:Name="LeftSideMenu" Margin="0,90,0,15" SideBrush="{DynamicResource MahApps.Brushes.AccentBase}" Background="{DynamicResource MahApps.Brushes.ThemeBackground}"  BorderThickness="0" Width="200" SubSideBrush="{DynamicResource MahApps.Brushes.Accent2}">
 
 
-                <hc:SideMenuItem x:Name="SideMenu_GetStartedItem" Header="Get Started"  Margin="0,0,0,0" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}">
+       
+                
+                
+                
+                
+                
+                
+
+                <hc:SideMenuItem x:Name="SideMenu_GetStartedItem" Header="Get Started"  Margin="0,100,0,0" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}">
                     <hc:SideMenuItem.Icon>
                         <iconPacks:Codicons Height="25" Kind="Tools" Width="25"/>
                     </hc:SideMenuItem.Icon>
@@ -118,7 +128,7 @@
                 </hc:SideMenuItem>
             </hc:SideMenu>
 
-
+            </Border>
             <Fluent:Button  Height="39"
                             VerticalAlignment="Bottom"
                             HorizontalAlignment="Stretch"
@@ -136,128 +146,36 @@
 
   
             <StackPanel Margin="5,15,0,0" Orientation="Horizontal" VerticalAlignment="Top" Height="54">
-                <Label Background="{x:Null}" Content="Home" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" BorderBrush="{x:Null}" FontSize="24" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Padding="0,0,0,0" Height="50" Width="74" VerticalAlignment="Top"/>
+                
             </StackPanel>
 
+            <Grid VerticalAlignment="Top" Margin="0,15,0,0" >
+                <Border  CornerRadius="0,0,0,0">
+                    <Grid>
+                        <Image HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0" Width="152" Height="152"  Source="pack://application:,,,/Resources/Icons/3.png">
 
+                        </Image>
+                       
+                    </Grid>
 
-        </Grid>
-
-        <Grid HorizontalAlignment="Right" Background="{DynamicResource MahApps.Brushes.ThemeBackground}">
-
-
-
-            <Grid Width="450" Height="30" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="0,690,0,0">
-                <hc:AnimationPath Data="{DynamicResource GithubGeometry}" 
-                          Duration="00:00:08" 
-                          Stretch="Uniform" StrokeThickness="2"
-                          Stroke="{DynamicResource MahApps.HamburgerMenu.Pane.Background}" PathLength="70" Margin="385,-2,0,2" HorizontalAlignment="Left"></hc:AnimationPath>
-
-                <StackPanel      Orientation="Horizontal" FlowDirection="LeftToRight" HorizontalAlignment="Right" Margin="0,0,75,0">
-                    <hc:Shield x:Name="WatchShield" Status ="5.0" Subject="Watchers" HorizontalAlignment="Right" Color="{DynamicResource MahApps.Brushes.Accent4}" Margin="75,0,0,0"/>
-                    <hc:Divider LineStrokeThickness="2" LineStroke="{DynamicResource MahApps.HamburgerMenu.Pane.Background}" Orientation="Vertical" MaxHeight="16"/>
-                    <hc:Shield x:Name="StarShield" Status ="5.0" Subject="Stars" HorizontalAlignment="Left" Color="{DynamicResource MahApps.Brushes.Accent4}" Margin="0,0,0,0"/>
-                    <hc:Divider LineStrokeThickness="2" LineStroke="{DynamicResource MahApps.HamburgerMenu.Pane.Background}" Orientation="Vertical" MaxHeight="16"/>
-                    <hc:Shield x:Name="ForkShield" Status ="5.0" Subject="Forks" HorizontalAlignment="Left" Color="{DynamicResource MahApps.Brushes.Accent4}" Margin="0,0,0,0"/>
-                </StackPanel>
+                </Border>
             </Grid>
 
-            <hc:GithubTimeLine x:Name="gitTime" TitleInfo="Test" TitleLabel="Test" FontSize="12" HorizontalContentAlignment="Stretch"  VerticalContentAlignment="Stretch"  ScrollViewer.VerticalScrollBarVisibility="Disabled" ScrollViewer.HorizontalScrollBarVisibility="Disabled" FlowDirection="RightToLeft" MaxWidth="450" Background="{DynamicResource MahApps.HamburgerMenu.Pane.Background}" Margin="0,70,0,10" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"  >
-                <hc:GithubTimeLine.Style>
-                    <Style TargetType="{x:Type hc:GithubTimeLine}" BasedOn="{StaticResource TreeViewBaseStyle}">
-                        <Setter Property="ItemContainerStyle" Value="{DynamicResource GithubTreeViewItemBaseStyle}"/>
-                        <Setter Property="BorderThickness" Value="0"/>
-                        <Setter Property="Template">
-                            <Setter.Value>
-                                <ControlTemplate>
-                                    <Grid Margin="0,30">
-                                        <Border Margin="48,-25,0,-10" HorizontalAlignment="Left" BorderThickness="3,0,0,0" BorderBrush="{DynamicResource MahApps.HamburgerMenu.Pane.Background}"/>
-                                        <ScrollViewer VerticalScrollBarVisibility="Hidden">
-                                            <ItemsPresenter x:Name="ItemPresent"/>
-                                        </ScrollViewer>
-                                    </Grid>
-                                </ControlTemplate>
-                            </Setter.Value>
-                        </Setter>
-                        <Setter Property="ItemTemplate">
-                            <Setter.Value>
-                                <HierarchicalDataTemplate DataType="{x:Type hc:GithubTimeLine}" ItemsSource="{Binding Members}">
-                                    <StackPanel Orientation="Horizontal">
-                                        <Label Style="{Binding TitleStyle}" Width="80" Height="43" Margin="5" FontWeight="DemiBold" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="15" BorderThickness="0"  Content="{Binding TitleLabel}"/>
-                                        <TextBlock Margin="5,0,0,0" FontSize="18" FontWeight="Thin" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" VerticalAlignment="Center" Text="{Binding TitleInfo}"/>
-                                    </StackPanel>
-                                    <HierarchicalDataTemplate.ItemTemplate>
-                                        <DataTemplate DataType="{x:Type hc:ContentMember}">
-
-                                            <StackPanel Margin="0,0,0,0" Orientation="Horizontal">
-                                                <hc:Badge  Background="{DynamicResource MahApps.Brushes.Accent}"  Status="Dot" Height="30" Margin="15,29,5,0" Style="{StaticResource BadgeDanger}" BorderThickness="2" BorderBrush="{DynamicResource MahApps.HamburgerMenu.Pane.Background}">
-                                                </hc:Badge>
-
-                                                <hc:Divider LineStrokeThickness="3" Width="25" VerticalAlignment="Center" LineStroke="{DynamicResource MahApps.HamburgerMenu.Pane.Background}"/>
 
 
-                                                <Label Style="{Binding ContentStyle}" Content="{Binding ContentTitle}" Width="80" Height="33" Margin="0,5,0,5" Foreground="{DynamicResource MahApps.Brushes.ThemeBackground}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontWeight="DemiBold" FontSize="10" BorderThickness="0"/>
-                                                <Border BorderBrush="{x:Null}" Height="55">
-                                                    <TextBlock Margin="5,0" FontSize="14" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Opacity="0.5" VerticalAlignment="Center" Text="{Binding ContentInfo}" TextWrapping="Wrap"  MaxWidth="275" TextAlignment="Center"/>
-
-                                                </Border>
-
-                                            </StackPanel>
-                                        </DataTemplate>
-                                    </HierarchicalDataTemplate.ItemTemplate>
-                                </HierarchicalDataTemplate>
-                            </Setter.Value>
-                        </Setter>
-                    </Style>
-                </hc:GithubTimeLine.Style>
-                <hc:GithubTimeLine.ItemContainerStyle >
-                    <Style BasedOn="{StaticResource BaseStyle}" TargetType="{x:Type TreeViewItem}">
-                        <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisualRadius0Margin0}"/>
-                        <Setter Property="Background" Value="Transparent"/>
-                        <Setter Property="Padding" Value="10,0"/>
-                        <Setter Property="IsExpanded" Value="True"/>
-                        <Setter Property="BorderThickness" Value="0"/>
-                        <Setter Property="Template">
-                            <Setter.Value>
-                                <ControlTemplate TargetType="{x:Type TreeViewItem}">
-                                    <Grid>
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition MinHeight="32"/>
-                                            <RowDefinition/>
-                                        </Grid.RowDefinitions>
-                                        <Border x:Name="Bd" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" Padding="{TemplateBinding Padding}" SnapsToDevicePixels="true">
-                                            <StackPanel Orientation="Horizontal" Margin="{Binding Converter={StaticResource TreeViewItemMarginConverter}, RelativeSource={RelativeSource TemplatedParent}}">
-                                                <ContentPresenter VerticalAlignment="Center" x:Name="PART_Header" ContentSource="Header" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
-                                            </StackPanel>
-                                        </Border>
-                                        <ItemsPresenter x:Name="ItemsHost" Grid.Row="1"/>
-                                    </Grid>
-                                    <ControlTemplate.Triggers>
-                                        <Trigger Property="IsExpanded" Value="false">
-                                            <Setter Property="Visibility" TargetName="ItemsHost" Value="Collapsed"/>
-                                        </Trigger>
-                                        <Trigger Property="IsMouseOver" Value="true">
-                                            <Setter Property="Background" TargetName="Bd" Value="{x:Null}"/>
-                                        </Trigger>
-                                        <Trigger Property="IsEnabled" Value="false">
-                                            <Setter Property="Foreground" Value="{StaticResource {x:Static SystemColors.GrayTextBrushKey}}"/>
-                                        </Trigger>
-                                    </ControlTemplate.Triggers>
-                                </ControlTemplate>
-                            </Setter.Value>
-                        </Setter>
-                    </Style>
-                </hc:GithubTimeLine.ItemContainerStyle>
-
-            </hc:GithubTimeLine>
-
-            <StackPanel VerticalAlignment="Top" HorizontalAlignment="Right">
-                <Label  Margin="0,10,5,0"  Width="185" Background="{x:Null}" Height="65" Content="What's New?" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" BorderBrush="{x:Null}" FontSize="24" HorizontalAlignment="Right"/>
-
-            </StackPanel>
-            <hc:Divider LineStrokeThickness="3" VerticalAlignment="Top" Margin="0,75,0,0" LineStroke="{DynamicResource MahApps.HamburgerMenu.Pane.Background}"/>
         </Grid>
-        <Grid x:Name="PageViewGrid" Margin="200,0,0,0"/>
+
+       
+
+
+
+        <Border CornerRadius="10" Margin="230,15,15,15" Background="{DynamicResource RegionBrush}" >
+            <Border Margin="1,15,1,15" CornerRadius="10" Background="{DynamicResource MahApps.Brushes.ThemeBackground}">
+                <Grid x:Name="PageViewGrid" Margin="0"/>
+
+            </Border>
+        </Border>
+        
 
     </Grid>
 
