--- a/WolvenKit/Views/HomePage/Pages/WikiPageView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/WikiPageView.xaml
@@ -6,17 +6,12 @@
                    xmlns:hc="https://handyorg.github.io/handycontrol"
                    IsVisibleChanged="UserControl_IsVisibleChanged">
 
-    <Grid hc:ThemeManager.RequestedAccentColor="{DynamicResource MahApps.Brushes.Accent3}"  Background="{DynamicResource MahApps.Brushes.ThemeBackground}" MinWidth="300" MinHeight="300" >
+    <Grid hc:ThemeManager.AccentColor="{DynamicResource MahApps.Brushes.Accent3}"  Background="{DynamicResource MahApps.Brushes.ThemeBackground}" MinWidth="300" MinHeight="300" >
         <Grid Margin="3,75,3,0">
-            <hc:TransitioningContentControl TransitionMode="Right2LeftWithFade">
-
-                <wv2:WebView2 Source="https://wiki.cybermods.net/wolvenkit/"/>
-            </hc:TransitioningContentControl>
-
+            <wv2:WebView2 Source="https://wiki.cybermods.net/wolvenkit/"/>
         </Grid>
-        <hc:TransitioningContentControl TransitionMode="Right2LeftWithFade">
 
-            <StackPanel HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,0,5,0" Orientation="Horizontal">
+        <StackPanel HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,0,5,0" Orientation="Horizontal">
 
             <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center " FontSize="20" Text="Wiki"></TextBlock>
             <hc:Divider Margin="15" Orientation="Vertical" Height="45" HorizontalAlignment="Center" VerticalAlignment="Center"></hc:Divider>
@@ -34,8 +29,6 @@
                 </hc:AnimationPath.RenderTransform>
             </hc:AnimationPath>
         </StackPanel>
-        </hc:TransitioningContentControl>
-
 
     </Grid>
 
