--- a/WolvenKit/Views/Wizards/WizardPages/FirstSetupWizard/CreateUserView.xaml
+++ b/WolvenKit/Views/Wizards/WizardPages/FirstSetupWizard/CreateUserView.xaml
@@ -5,6 +5,14 @@
                    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
                    xmlns:hc="https://handyorg.github.io/handycontrol">
 
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/Themes/TextBoxExtendedCustom.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </UserControl.Resources>
+
     <Grid VerticalAlignment="Center" Grid.Row="3" >
         <Grid Margin="5,5,5,5" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" HorizontalAlignment="Stretch">
             <Grid Grid.Row="1" HorizontalAlignment="Stretch">
@@ -16,15 +24,15 @@
                                 <hc:ImageSelector Margin="64,0,0,0" Width="100" Height="100"  HorizontalAlignment="Left"/>
 
                             </StackPanel>
-                            <TextBox   hc:InfoElement.TitleWidth="140" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Author" Style="{StaticResource TextBoxExtend}" Margin="0,32,0,0" Text="test" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" SelectionBrush="{DynamicResource MahApps.Brushes.Accent}" HorizontalAlignment="Stretch"/>
-                            <TextBox  hc:InfoElement.TitleWidth="140" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Email" Style="{StaticResource TextBoxExtend}" Margin="0,32,0,0" Text="test" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" SelectionBrush="{DynamicResource MahApps.Brushes.Accent}" HorizontalAlignment="Stretch"/>
-                            <TextBox  hc:InfoElement.TitleWidth="140" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Donate Link" Style="{StaticResource TextBoxExtend}" Margin="0,32,0,0" Text="test" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" SelectionBrush="{DynamicResource MahApps.Brushes.Accent}" HorizontalAlignment="Stretch"/>
+                            <hc:TextBox  hc:InfoElement.Necessary="True" hc:InfoElement.TitleWidth="140" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Author" Style="{StaticResource TextBoxExtendCustom}" Margin="0,32,0,0" Text="{Binding Author}" HorizontalAlignment="Stretch"/>
+                            <hc:TextBox  hc:InfoElement.Necessary="True" hc:InfoElement.TitleWidth="140" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Email" Style="{StaticResource TextBoxExtendCustom}" Margin="0,32,0,0" Text="{Binding Email}" HorizontalAlignment="Stretch"/>
+                            <hc:TextBox  hc:InfoElement.Necessary="True" hc:InfoElement.TitleWidth="140" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Donate Link" Style="{StaticResource TextBoxExtendCustom}" Margin="0,32,0,0" Text="{Binding DonateLink}" HorizontalAlignment="Stretch"/>
 
 
                             <Grid >
                                 <RichTextBox   Margin="140,32,0,0" HorizontalAlignment="Stretch" Height="100"></RichTextBox>
 
-                                <TextBlock   Text="Default Description" Margin="2,32,0,0" VerticalAlignment="Center" />
+                                <TextBlock   Text="{Binding DefaultDescription}" Margin="2,32,0,0" VerticalAlignment="Center" />
 
                             </Grid>
 
