--- a/WolvenKit/Views/HomePage/Pages/IntegratedToolsPageView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/IntegratedToolsPageView.xaml
@@ -10,37 +10,43 @@
 
 
         <Grid Margin="3,75,3,0">
-            <hc:TabControl x:Name="TabControlDemo" IsAnimationEnabled="True" ShowCloseButton="False" IsDraggable="False" IsTabFillEnabled="True" Margin="0,0,0,0"  >
-                <hc:TabItem  x:Name="GeneralTabItem" IsSelected="True" >
-                    <hc:TabItem.Header>
-                        <StackPanel Orientation="Horizontal">
-                            <iconPacks:PackIconCodicons Kind="VM"></iconPacks:PackIconCodicons>
-                            <TextBlock Text="CyberCAT" Margin="10,0,0,0"></TextBlock>
-                        </StackPanel>
-                    </hc:TabItem.Header>                    
-                    
-                </hc:TabItem>
+            <hc:TransitioningContentControl TransitionMode="Right2LeftWithFade">
+
+                <hc:TabControl x:Name="TabControlDemo" IsAnimationEnabled="True" ShowCloseButton="False" IsDraggable="False" IsTabFillEnabled="True" Margin="0,0,0,0"  >
+                    <hc:TabItem  x:Name="GeneralTabItem" IsSelected="True" >
+                        <hc:TabItem.Header>
+                            <StackPanel Orientation="Horizontal">
+                                <iconPacks:PackIconCodicons Kind="VM"></iconPacks:PackIconCodicons>
+                                <TextBlock Text="CyberCAT" Margin="10,0,0,0"></TextBlock>
+                            </StackPanel>
+                        </hc:TabItem.Header>
+
+                    </hc:TabItem>
 
 
-            </hc:TabControl>
+                </hc:TabControl>
+            </hc:TransitioningContentControl>
+
         </Grid>
 
+        <hc:TransitioningContentControl TransitionMode="Right2LeftWithFade">
 
 
             <StackPanel HorizontalAlignment="Right" VerticalAlignment="Top" Margin="5" Orientation="Horizontal">
 
-            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center " FontSize="20" Text="Integrated Tools"></TextBlock>
-            <hc:Divider Margin="15" Orientation="Vertical" Height="45" HorizontalAlignment="Center" VerticalAlignment="Center"></hc:Divider>
-            <hc:AnimationPath  Height="45" Width="45" Data="{DynamicResource IntegratedGeo}" 
+                <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center " FontSize="20" Text="Integrated Tools"></TextBlock>
+                <hc:Divider Margin="15" Orientation="Vertical" Height="45" HorizontalAlignment="Center" VerticalAlignment="Center"></hc:Divider>
+                <hc:AnimationPath  Height="45" Width="45" Data="{DynamicResource IntegratedGeo}" 
                           Duration="00:00:06" 
                           Stretch="Uniform" StrokeThickness="1.5"
                           Stroke="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="5" PathLength="105" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <hc:AnimationPath.LayoutTransform>
-                    <ScaleTransform ScaleY="-1" />
+                    <hc:AnimationPath.LayoutTransform>
+                        <ScaleTransform ScaleY="-1" />
 
-                </hc:AnimationPath.LayoutTransform>
-            </hc:AnimationPath>
-        </StackPanel>
+                    </hc:AnimationPath.LayoutTransform>
+                </hc:AnimationPath>
+            </StackPanel>
+        </hc:TransitioningContentControl>
 
     </Grid>
 
